# LLM-Zoomcamp

./: .gitignore  09-data-ingestion.ipynb  13-function-calling.ipynb  14-agentic-loop.ipynb  RAG.ipynb  faq.db  lab_1.ipynb  pyproject.toml  rag_helper.py
LLM-Zoomcamp-hw4/: evaluation_utils.py  lab_w4.ipynb  rag_helper.py
llm-zoomcamp-hw2/: HOMEWORK2.ipynb  pyproject.toml
llm-zoomcamp-hw3/: 4_simple_agent.yaml  KESTRA.md  docker-compose.yml  list_models.py  orchestration.ipynb  test_gemini.py
